--- a/.github/workflows/ipv6-only.yml
+++ b/.github/workflows/ipv6-only.yml
@@ -121,8 +121,8 @@ jobs:
         id: k8s
         run: |
           # Enable IPv6 and container network options
-          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=0
-          sudo sysctl -w net.ipv6.conf.all.forwarding=1
+          # sudo sysctl -w net.ipv6.conf.all.disable_ipv6=0
+          # sudo sysctl -w net.ipv6.conf.all.forwarding=1
 
           # Create IPv6-only kind cluster
           kind create cluster \
