--- a/.github/workflows/ipv6-only.yml
+++ b/.github/workflows/ipv6-only.yml
@@ -78,14 +78,14 @@ jobs:
             type=schedule
             type=ref,event=pr
             type=ref,event=branch,suffix=-rc,enable=${{ startsWith(github.ref, 'refs/heads/release') }}
-      # - name: Build binary
-      #   uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
-      #   with:
-      #     version: v2.12.0 # renovate: datasource=github-tags depName=goreleaser/goreleaser
-      #     args: build --single-target --snapshot --clean
-      #   env:
-      #     TELEMETRY_ENDPOINT: otel-collector-opentelemetry-collector.collector.svc.cluster.local:4317
-      #     TELEMETRY_ENDPOINT_INSECURE: "true"
+      - name: Build binary
+        uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
+        with:
+          version: v2.12.0 # renovate: datasource=github-tags depName=goreleaser/goreleaser
+          args: build --single-target --snapshot --clean
+        env:
+          TELEMETRY_ENDPOINT: otel-collector-opentelemetry-collector.collector.svc.cluster.local:4317
+          TELEMETRY_ENDPOINT_INSECURE: "true"
 
       - name: Build NGF Docker Image
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
