--- a/.github/workflows/ipv6-only.yml
+++ b/.github/workflows/ipv6-only.yml
@@ -82,7 +82,8 @@ jobs:
         uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
         with:
           version: v2.12.0 # renovate: datasource=github-tags depName=goreleaser/goreleaser
-          args: build --single-target --snapshot --clean
+          args: 
+            build --single-target --snapshot --clean release --config=./goreleaser.yml --rm-dist
         env:
           TELEMETRY_ENDPOINT: otel-collector-opentelemetry-collector.collector.svc.cluster.local:4317
           TELEMETRY_ENDPOINT_INSECURE: "true"
