--- a/.github/workflows/ipv6-only.yml
+++ b/.github/workflows/ipv6-only.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           version: v2.12.0 # renovate: datasource=github-tags depName=goreleaser/goreleaser
           args: 
-            build --single-target --snapshot --clean release --config=./goreleaser.yml --rm-dist
+            build --single-target --snapshot --clean --config=./goreleaser.yml --rm-dist
         env:
           TELEMETRY_ENDPOINT: otel-collector-opentelemetry-collector.collector.svc.cluster.local:4317
           TELEMETRY_ENDPOINT_INSECURE: "true"
