--- a/.github/workflows/gke-ipv6-only.yml
+++ b/.github/workflows/gke-ipv6-only.yml
@@ -260,10 +260,12 @@ jobs:
           kubectl logs ipv6-test-client --tail=100 || true
           echo "Cluster events:"
           kubectl get events --sort-by='.lastTimestamp' --all-namespaces --tail=50 || true
-          
+
       - name: Cleanup
+        working-directory: ./tests
         if: always()
-        env:
-          RUN_ID: ${{ github.run_id }}
         run: |
-          kind delete cluster --name "$RUN_ID-ipv6" || true
+          bash scripts/cleanup-vm.sh true
+          bash scripts/cleanup-router.sh true
+          make delete-gke-cluster
+          rm -rf scripts/vars.env
