--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -178,12 +178,18 @@ jobs:
           if [ "${core_result}" == "failure" ] || [ "${extended_result}" == "failure" ]; then echo "Conformance test failed, see above for details." && exit 2; fi
         working-directory: ./tests
 
+      - name: Echo artifact name
+        if: ${{ inputs.enable-experimental }}
+        run: |
+          echo "Artifact name: conformance-profile-${{ inputs.image }}-${{ inputs.k8s-version }}-${{ steps.ngf-meta.outputs.version }}"
+
       - name: Upload profile to GitHub
         if: ${{ inputs.enable-experimental }}
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
           name: conformance-profile-${{ inputs.image }}-${{ inputs.k8s-version }}-${{ steps.ngf-meta.outputs.version }}
           path: ./tests/conformance-profile.yaml
+
 
       - name: Upload profile to release
         if: ${{ inputs.production-release && inputs.enable-experimental }}
